Correção do local do diretório "img"

--- a/contato.html
+++ b/contato.html
@@ -9,8 +9,12 @@
   <body>
     <header class="site-header">
       <div class="container header-inner">
-  <img class="logo logo--right logo--large" src="IMG/logoSVG/Store-pin.svg" alt="Logo da Store-pin">
-  <a class="brand" href="index.html">STOREPIN</a>
+        <img
+          class="logo logo--right logo--large"
+          src="./assets/img/logoSVG/Store-pin.svg"
+          alt="Logo da Store-pin"
+        />
+        <a class="brand" href="index.html">STOREPIN</a>
         <nav class="main-nav">
           <ul>
             <li><a href="produtos.html">PINS PARA COLECIONADOR</a></li>
@@ -23,16 +27,34 @@
 
     <main class="container page-contato">
       <h1>Contato</h1>
-      <p class="intro">Se tiver dúvidas, sugestões ou quiser falar sobre nossos pins, entre em contato pelos canais abaixo. Responderemos o mais rápido possível.</p>
+      <p class="intro">
+        Se tiver dúvidas, sugestões ou quiser falar sobre nossos pins, entre em
+        contato pelos canais abaixo. Responderemos o mais rápido possível.
+      </p>
 
       <section class="fale-conosco">
         <h2>Fale conosco</h2>
         <div class="content">
-          <p>✉️ <strong>Email:</strong> <a href="mailto:contato@StorePin.com">contato@StorePin.com</a></p>
-          <p>📱 <strong>WhatsApp:</strong> <a href="https://wa.me/5581999999999" target="_blank">(81) 99999-9999</a></p>
+          <p>
+            ✉️ <strong>Email:</strong>
+            <a href="mailto:contato@StorePin.com">contato@StorePin.com</a>
+          </p>
+          <p>
+            📱 <strong>WhatsApp:</strong>
+            <a href="https://wa.me/5581999999999" target="_blank"
+              >(81) 99999-9999</a
+            >
+          </p>
           <p>☎️ <strong>Telefone:</strong> (81) 3456-7890</p>
-          <p>📍 <strong>Endereço:</strong> Rua Matheus Brasileiro Aguiar - Brasil</p>
-          <p>📷 <strong>Instagram:</strong> <a href="https://instagram.com/StorePin" target="_blank">@StorePin</a></p>
+          <p>
+            📍 <strong>Endereço:</strong> Rua Matheus Brasileiro Aguiar - Brasil
+          </p>
+          <p>
+            📷 <strong>Instagram:</strong>
+            <a href="https://instagram.com/StorePin" target="_blank"
+              >@StorePin</a
+            >
+          </p>
         </div>
       </section>
     </main>
