--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
   <body>
     <header class="site-header">
       <div class="container header-inner">
-  <img class="logo logo--right logo--large" src="IMG/logoSVG/Store-pin.svg" alt="Logo da Store-pin">
-  <a class="brand" href="index.html">STOREPIN</a>
+        <img
+          class="logo logo--right logo--large"
+          src="./assets/img/logoSVG/Store-pin.svg"
+          alt="Logo da Store-pin"
+        />
+        <a class="brand" href="index.html">STOREPIN</a>
         <nav class="main-nav">
           <ul>
             <li><a href="produtos.html">PINS PARA COLECIONADOR</a></li>
@@ -25,48 +29,76 @@
       <section class="hero">
         <div class="container">
           <h1>Bem-vindo à StorePin</h1>
-          <p class="lead">Pins exclusivos, colecionáveis e feitos para expressar sua paixão.</p>
+          <p class="lead">
+            Pins exclusivos, colecionáveis e feitos para expressar sua paixão.
+          </p>
         </div>
       </section>
 
       <section class="featured container">
         <h2>Destaques</h2>
         <div class="grid">
-
           <article class="card">
-            <div class="thumb"> <img src="./IMG/pinsDev/HTMLbg.png" alt="Pin de aço de HTML"></div>
+            <div class="thumb">
+              <img
+                src="./assets/img/pinsDev/HTMLbg.png"
+                alt="Pin de aço de HTML"
+              />
+            </div>
             <h3>DEV-HTML</h3>
             <p class="price">R$ 19,90</p>
-            <a href="produtos.html#dev-html"><button class="btn">Comprar</button></a>
+            <a href="produtos.html#dev-html"
+              ><button class="btn">Comprar</button></a
+            >
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src= "IMG/pinsHobbit/Bilbo_sHouse-removebg-preview.png" alt="Pin de aço bilbo's house">  </div>
+            <div class="thumb">
+              <img
+                src="./assets/img/pinsHobbit/Bilbo_sHouse-removebg-preview.png"
+                alt="Pin de aço bilbo's house"
+              />
+            </div>
             <h3>Bilbo's house</h3>
             <p class="price">R$ 24,90</p>
-            <a href="produtos.html#o-hobbit"><button class="btn">Comprar</button></a>
+            <a href="produtos.html#o-hobbit"
+              ><button class="btn">Comprar</button></a
+            >
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src= "./IMG/pinsSilksong/Hornet.png" alt="Silksong"">  </div>
+            <div class="thumb">
+              <img src= "./assets/img/pinsSilksong/Hornet.png" alt="Silksong"">
+            </div>
             <h3>Hollow Knight: Silksong</h3>
             <p class="price">R$ 24,90</p>
-            <a href="produtos.html#Silksong"><button class="btn">Comprar</button></a>
+            <a href="produtos.html#Silksong"
+              ><button class="btn">Comprar</button></a
+            >
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src="./IMG/pinsRedline/Lamborghini Aventador.png" alt="Pin da Lamborghini Aventador"></div>
+            <div class="thumb">
+              <img
+                src="./assets/img/pinsRedline/Lamborghini Aventador.png"
+                alt="Pin da Lamborghini Aventador"
+              />
+            </div>
             <h3>Lamborghini Aventador</h3>
             <p class="price">R$ 24,90</p>
-            <a href="produtos.html#redline"><button class="btn">Comprar</button></a>
+            <a href="produtos.html#redline"
+              ><button class="btn">Comprar</button></a
+            >
           </article>
-          
         </div>
       </section>
 
       <section class="about container">
         <h2>Sobre a loja</h2>
-        <p class="resumo">Aqui você encontrará os melhores pins para completar sua coleção. Atendimento rápido, embalagens seguras e novidades toda semana.</p>
+        <p class="resumo">
+          Aqui você encontrará os melhores pins para completar sua coleção.
+          Atendimento rápido, embalagens seguras e novidades toda semana.
+        </p>
       </section>
     </main>
 
