--- a/produtos.html
+++ b/produtos.html
@@ -9,7 +9,7 @@
   <body>
     <header class="site-header">
       <div class="container header-inner">
-          <img class="logo logo--right logo--large" src="IMG/logoSVG/Store-pin.svg" alt="Logo da Store-pin">
+          <img class="logo logo--right logo--large" src="./assets/img/logoSVG/Store-pin.svg" alt="Logo da Store-pin">
         <a class="brand" href="index.html">STOREPIN</a>
         <nav class="main-nav">
           <ul>
@@ -35,28 +35,28 @@
         <div class="grid" id="dev-html">
 
           <article class="card">
-            <div class="thumb"> <img src="./IMG/pinsDev/HTMLbg.png" alt="Pin de aço de HTML"></div>
+            <div class="thumb"> <img src="./assets/img/pinsDev/HTMLbg.png" alt="Pin de aço de HTML"></div>
             <h3>DEV-HTML</h3>
             <p class="price">R$ 19,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src= "./IMG/pinsDev/Javabg.png" alt="Pin de aço JAVA">  </div>
+            <div class="thumb"> <img src= "./assets/img/pinsDev/Javabg.png" alt="Pin de aço JAVA">  </div>
             <h3>DEV-JAVA</h3>
             <p class="price">R$ 19,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src="./IMG/pinsDev/Phytonbg.png" alt="Pin de aço de PYTHON"> </div>
+            <div class="thumb"> <img src="./assets/img/pinsDev/Phytonbg.png" alt="Pin de aço de PYTHON"> </div>
             <h3>DEV-PHYTON</h3>
             <p class="price">R$ 19,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src="./IMG/pinsDev/SQLbg.png" alt="Pin de aço de SQL">  </div>
+            <div class="thumb"> <img src="./assets/img/pinsDev/SQLbg.png" alt="Pin de aço de SQL">  </div>
             <h3>DEV-SQL</h3>
             <p class="price">R$ 19,90</p>
             <button class="btn">Comprar</button>
@@ -71,28 +71,28 @@
         <div class="grid" id="o-hobbit">
 
           <article class="card">
-            <div class="thumb"> <img src="./IMG/pinsHobbit/SmaugAndTreasure-removebg-preview.png" alt="Dragao Smaug com tesouro"></div>
+            <div class="thumb"> <img src="./assets/img/pinsHobbit/SmaugAndTreasure-removebg-preview.png" alt="Dragao Smaug com tesouro"></div>
             <h3>Smaug and Treasure</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src= "IMG/pinsHobbit/Bilbo_sHouse-removebg-preview.png" alt="Pin de aço bilbo's house">  </div>
+            <div class="thumb"> <img src= "./assets/img/pinsHobbit/Bilbo_sHouse-removebg-preview.png" alt="Pin de aço bilbo's house">  </div>
             <h3>Bilbo's House</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src="./IMG/pinsHobbit/Sting-removebg-preview.png" alt="Espada de Bilbo"></div>
+            <div class="thumb"> <img src="./assets/img/pinsHobbit/Sting-removebg-preview.png" alt="Espada de Bilbo"></div>
             <h3>Sting Sword</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src="./IMG/pinsHobbit/TheLonelyMountain-removebg-preview.png" alt="Montanha Solitária"> </div>
+            <div class="thumb"> <img src="./assets/img/pinsHobbit/TheLonelyMountain-removebg-preview.png" alt="Montanha Solitária"> </div>
             <h3>The Lonely Mountain</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
@@ -107,28 +107,28 @@
         <div class="grid" id="Silksong">
 
           <article class="card">
-            <div class="thumb"> <img src="./IMG/pinsSilksong/Groal,O-Grande.png" alt="Groal, o grande"></div>
+            <div class="thumb"> <img src="./assets/img/pinsSilksong/Groal,O-Grande.png" alt="Groal, o grande"></div>
             <h3>Groal, o grande</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src= "./IMG/pinsSilksong/Asa-do-Pantano.png" alt="Asa do Pântano">  </div>
+            <div class="thumb"> <img src= "./assets/img/pinsSilksong/Asa-do-Pantano.png" alt="Asa do Pântano">  </div>
             <h3>Asa do Pântano</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src= "./IMG/pinsSilksong/Daçarinos-Mecanicos.png" alt="Dançarinos Mecânicos">  </div>
+            <div class="thumb"> <img src= "./assets/img/pinsSilksong/Daçarinos-Mecanicos.png" alt="Dançarinos Mecânicos">  </div>
             <h3>Dançarinos Mecânicos</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src= "./IMG/pinsSilksong/Hornet.png" alt="Hornet">  </div>
+            <div class="thumb"> <img src= "./assets/img/pinsSilksong/Hornet.png" alt="Hornet">  </div>
             <h3>Hornet</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
@@ -143,28 +143,28 @@
         <div class="grid" id="redline">
 
           <article class="card">
-            <div class="thumb"> <img src="./IMG/pinsRedline/Chevrolet Camaro 6ª.png" alt="Chevrolet Camaro 6ª Geração"></div>
+            <div class="thumb"> <img src="./assets/img/pinsRedline/Chevrolet Camaro 6ª.png" alt="Chevrolet Camaro 6ª Geração"></div>
             <h3>Chevrolet Camaro 6ª Geração</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src= "./IMG/pinsRedline/Ford Mustang 4ª SN95.png" alt="Ford Mustang 4ª SN95">  </div>
+            <div class="thumb"> <img src= "./assets/img/pinsRedline/Ford Mustang 4ª SN95.png" alt="Ford Mustang 4ª SN95">  </div>
             <h3>Ford Mustang 4ª SN95</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src="./IMG/pinsRedline/Lamborghini Aventador.png" alt="Pin da Lamborghini Aventador"></div>
+            <div class="thumb"> <img src="./assets/img/pinsRedline/Lamborghini Aventador.png" alt="Pin da Lamborghini Aventador"></div>
             <h3>Lamborghini Aventador</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src="./IMG/pinsRedline/Lamborghini Sian.png" alt="Lamborghini Sian"></div>
+            <div class="thumb"> <img src="./assets/img/pinsRedline/Lamborghini Sian.png" alt="Lamborghini Sian"></div>
             <h3>Lamborghini Sian</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
