--- a/sobre.html
+++ b/sobre.html
@@ -9,7 +9,12 @@
   <body>
     <header class="site-header">
       <div class="container header-inner">
-        <a class="brand" href="index.html" >STOREPIN</a>
+        <img
+          class="logo logo--right logo--large"
+          src="./assets/img/logoSVG/Store-pin.svg"
+          alt="Logo da Store-pin"
+        />
+        <a class="brand" href="index.html">STOREPIN</a>
         <nav class="main-nav">
           <ul>
             <li><a href="produtos.html">PINS PARA COLECIONADOR</a></li>
@@ -20,30 +25,113 @@
       </div>
     </header>
 
-    <main class="container" style="padding-top: 2rem; padding-bottom: 2rem;">
-      <h1 style="text-align: center; margin-bottom: 1.5rem; color:#eee">Sobre a Store Pin: Onde o Código Encontra o Estilo.</h1>
-      <p style="text-align: center; max-width: 800px; margin: 0 auto 2rem auto;color:#eee">Bem-vindo à Store Pin! Mais do que um e-commerce, esta é a materialização de um projeto de aprendizado prático na disciplina de Introdução à Computação - HTML, da C.E.S.A.R School.</p>
-      <p style="text-align: center; max-width: 800px; margin: 0 auto 2rem auto;color:#eee">Nossa missão é simples: oferecer uma coleção de pin's estilosos e exclusivos, enquanto demonstramos o poder da estruturação web e do HTML semântico. Cada clique e cada detalhe desta página foi cuidadosamente codificado para sua melhor experiência.</p>
+    <main class="container" style="padding-top: 2rem; padding-bottom: 2rem">
+      <h1 style="text-align: center; margin-bottom: 1.5rem; color: #eee">
+        Sobre a Store Pin: Onde o Código Encontra o Estilo.
+      </h1>
+      <p
+        style="
+          text-align: center;
+          max-width: 800px;
+          margin: 0 auto 2rem auto;
+          color: #eee;
+        "
+      >
+        Bem-vindo à Store Pin! Mais do que um e-commerce, esta é a
+        materialização de um projeto de aprendizado prático na disciplina de
+        Introdução à Computação - HTML, da C.E.S.A.R School.
+      </p>
+      <p
+        style="
+          text-align: center;
+          max-width: 800px;
+          margin: 0 auto 2rem auto;
+          color: #eee;
+        "
+      >
+        Nossa missão é simples: oferecer uma coleção de pin's estilosos e
+        exclusivos, enquanto demonstramos o poder da estruturação web e do HTML
+        semântico. Cada clique e cada detalhe desta página foi cuidadosamente
+        codificado para sua melhor experiência.
+      </p>
 
-      <section style="margin-bottom: 2rem; color:#eee">
-        <h2 style="border-bottom: 2px solid #eee; padding-bottom: 0.5rem; margin-bottom: 1rem;">Nascidos do Código.</h2>
-        <p >A Store Pin surgiu como um desafio acadêmico para aplicar, do zero, os conceitos de HTML. Decidimos que o tema "Pin's" seria perfeito: colecionáveis, icônicos e com potencial visual para criarmos uma vitrine atraente.</p>
-        <p>Por trás desta tela, uma equipe de estudantes se dedicou a transformar linhas de código em uma experiência de compra funcional (e-commerce estático). Estruturamos a navegação, definimos a hierarquia das informações e garantimos que o site fosse acessível e intuitivo, provando que o aprendizado em programação é o primeiro passo para criar mundos digitais.</p>
+      <section style="margin-bottom: 2rem; color: #eee">
+        <h2
+          style="
+            border-bottom: 2px solid #eee;
+            padding-bottom: 0.5rem;
+            margin-bottom: 1rem;
+          "
+        >
+          Nascidos do Código.
+        </h2>
+        <p>
+          A Store Pin surgiu como um desafio acadêmico para aplicar, do zero, os
+          conceitos de HTML. Decidimos que o tema "Pin's" seria perfeito:
+          colecionáveis, icônicos e com potencial visual para criarmos uma
+          vitrine atraente.
+        </p>
+        <p>
+          Por trás desta tela, uma equipe de estudantes se dedicou a transformar
+          linhas de código em uma experiência de compra funcional (e-commerce
+          estático). Estruturamos a navegação, definimos a hierarquia das
+          informações e garantimos que o site fosse acessível e intuitivo,
+          provando que o aprendizado em programação é o primeiro passo para
+          criar mundos digitais.
+        </p>
       </section>
 
-      <section style="margin-bottom: 2rem;">
-        <h2 style="border-bottom: 2px solid #eee; padding-bottom: 0.5rem; margin-bottom: 1rem; color:#eee">Mais Semântica, Mais Estilo.</h2>
-        <p style="color:#eee">Na Store Pin, nossa missão é dupla:</p>
-        <ul style="list-style-position: inside; padding-left: 20px;color:#eee">
-            <li><strong>Educacional:</strong> Aplicar rigorosamente as boas práticas de desenvolvimento, utilizando tags semânticas (&lt;header&gt;, &lt;nav&gt;, &lt;main&gt;) e garantindo uma estrutura de código limpa e lógica.</li>
-            <li><strong>Comercial (Fictícia):</strong> Ser o ponto de encontro para entusiastas de pin's, oferecendo designs criativos que expressam personalidade e paixão.</li>
+      <section style="margin-bottom: 2rem">
+        <h2
+          style="
+            border-bottom: 2px solid #eee;
+            padding-bottom: 0.5rem;
+            margin-bottom: 1rem;
+            color: #eee;
+          "
+        >
+          Mais Semântica, Mais Estilo.
+        </h2>
+        <p style="color: #eee">Na Store Pin, nossa missão é dupla:</p>
+        <ul
+          style="list-style-position: inside; padding-left: 20px; color: #eee"
+        >
+          <li>
+            <strong>Educacional:</strong> Aplicar rigorosamente as boas práticas
+            de desenvolvimento, utilizando tags semânticas (&lt;header&gt;,
+            &lt;nav&gt;, &lt;main&gt;) e garantindo uma estrutura de código
+            limpa e lógica.
+          </li>
+          <li>
+            <strong>Comercial (Fictícia):</strong> Ser o ponto de encontro para
+            entusiastas de pin's, oferecendo designs criativos que expressam
+            personalidade e paixão.
+          </li>
         </ul>
       </section>
 
       <section>
-        <h2 style="border-bottom: 2px solid #eee; padding-bottom: 0.5rem; margin-bottom: 1rem; color:#eee">Por Que Pin's? O Ícone Perfeito.</h2>
-        <p style="color:#eee">Pin's são pequenos ícones que carregam grandes histórias. Eles representam hobbies, causas, memes ou momentos. Eles são, na essência, como ícones digitais ganhando vida.</p>
-        <p style="color:#eee">Na Store Pin, cada pin listado é uma oportunidade de praticarmos a integração de mídias (&lt;img&gt;), o uso de listas (&lt;ul&gt; para a vitrine) e a organização de conteúdo em cards, simulando um ambiente de e-commerce real com a base sólida que o HTML oferece.</p>
+        <h2
+          style="
+            border-bottom: 2px solid #eee;
+            padding-bottom: 0.5rem;
+            margin-bottom: 1rem;
+            color: #eee;
+          "
+        >
+          Por Que Pin's? O Ícone Perfeito.
+        </h2>
+        <p style="color: #eee">
+          Pin's são pequenos ícones que carregam grandes histórias. Eles
+          representam hobbies, causas, memes ou momentos. Eles são, na essência,
+          como ícones digitais ganhando vida.
+        </p>
+        <p style="color: #eee">
+          Na Store Pin, cada pin listado é uma oportunidade de praticarmos a
+          integração de mídias (&lt;img&gt;), o uso de listas (&lt;ul&gt; para a
+          vitrine) e a organização de conteúdo em cards, simulando um ambiente
+          de e-commerce real com a base sólida que o HTML oferece.
+        </p>
       </section>
     </main>
 
