implementação do IFrame solicitado

--- a/contato.html
+++ b/contato.html
@@ -54,6 +54,8 @@
             <a href="https://instagram.com/StorePin" target="_blank"
               >@StorePin</a
             >
+            <h2>Nossa Localização</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50854.38124011879!2d-43.588975560656465!3d-22.87560824194445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9be18365a88c79%3A0xf3d112d45a57953f!2sR.%20Matheus%20Brasileiro%20Aguiar%20-%20Campo%20Grande%2C%20Rio%20de%20Janeiro%20-%20RJ!5e0!3m2!1spt-BR!2sbr!4v1760219150723!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </p>
         </div>
       </section>
